[package]
name = "wasmi-validation"
version = "0.3.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "MIT/Apache-2.0"
repository = "https://github.com/paritytech/wasmi"
description = "Wasm code validator"

[dependencies]
parity-wasm = { git = "https://github.com/veracruz-project/parity-wasm.git", default-features = false, branch="veracruz" }
sgx_tstd = { rev = "v1.1.2", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }

[dev-dependencies]
#assert_matches = "1.1"

[features]
default = ["std" ]
std = ["parity-wasm/std"]
core = []
mesalock_sgx = ["std", "sgx_tstd", "parity-wasm/mesalock_sgx"]
